# sintezy-sdk-python

./: .gitignore  README.md  pyproject.toml
sintezy/: __init__.py
