[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sintezy"
version = "0.1.3"
description = "SDK oficial para integração com a plataforma Sintezy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sintezy", email = "contato@sintezy.com"}
]
keywords = ["sintezy", "medical", "transcription", "healthcare", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/Sintezy/sintezy-sdk-python"
Documentation = "https://sintezy.com/developers"
Repository = "https://github.com/Sintezy/sintezy-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
